# wgautomesh

./: Cargo.nix  Cargo.toml  Makefile  README.md  config.toml  flake.nix
src/: igd.rs  main.rs
