[package]
name = "wgautomesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = { version = "0.7", default-features = false, features = ["parse"] }

igd = { version = "0.12", default-features = false }
get_if_addrs = "0.5"
